--- a/references.bib
+++ b/references.bib
@@ -378,3 +378,33 @@
 	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1804-07745},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{qi2018and,
+	title={When and Why are Pre-trained Word Embeddings Useful for Neural Machine Translation?},
+	author={Qi, Ye and Sachan, Devendra Singh and Felix, Matthieu and Padmanabhan, Sarguna Janani and Neubig, Graham},
+	journal={arXiv preprint arXiv:1804.06323},
+	year={2018}
+}
+
+@inproceedings{neishi2017bag,
+	title={A bag of useful tricks for practical neural machine translation: Embedding layer initialization and large batch size},
+	author={Neishi, Masato and Sakuma, Jin and Tohda, Satoshi and Ishiwatari, Shonosuke and Yoshinaga, Naoki and Toyoda, Masashi},
+	booktitle={Proceedings of the 4th Workshop on Asian Translation (WAT2017)},
+	pages={99--109},
+	year={2017}
+}
+
+@inproceedings{pennington2014glove,
+	title={Glove: Global vectors for word representation},
+	author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher},
+	booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+	pages={1532--1543},
+	year={2014}
+}
+
+@article{smith2017offline,
+	title={Offline bilingual word vectors, orthogonal transformations and the inverted softmax},
+	author={Smith, Samuel L and Turban, David HP and Hamblin, Steven and Hammerla, Nils Y},
+	journal={arXiv preprint arXiv:1702.03859},
+	year={2017}
+}
