--- a/experiments.tex
+++ b/experiments.tex
@@ -140,7 +140,11 @@
 	\end{itemize}
 \end{itemize}
 
-
+\begin{figure}[t]
+	\includegraphics[width=14cm]{corpus}
+	\centering
+	\caption{A cross-lingual embedding space between German and English (\cite{ruder2017survey})}
+\end{figure}
 
 
 \section{Sentence Translation}
